# devops-engineer-from-scratch-project-313

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  nginx.conf  nginx.conf.template  package-lock.json  package.json  pyproject.toml  start.sh
.github/workflows/: ci.yml
paas_web_app/: app.py  db.py  models.py
tests/: test_links_api.py  test_ping.py
