[project]
name = "devops-engineer-from-scratch-project-313"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<4.0"
authors = [
    { name = "EvgeniyMsk" },
]
dependencies = [
    "flask>=3.1.3",
    "sentry-sdk>=2.60.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
paas_web_app = "paas_web_app.app:run"

[tool.hatch.build.targets.wheel]
packages = ["paas_web_app"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
