[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<4.0"
authors = [
    { name = "EvgeniyMsk" },
]
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.1",
    "python-dotenv>=1.1.1",
    "psycopg[binary]>=3.2.10",
    "sqlmodel>=0.0.25",
    "sentry-sdk>=2.60.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
paas_web_app = "paas_web_app.app:run"

[tool.hatch.build.targets.wheel]
packages = ["paas_web_app"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
